.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Service_Type_Version_Correspondence__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Correspondence__c</fullName>
        <label>Correspondence</label>
        <referenceTo>Incap311__Correspondence__c</referenceTo>
        <relationshipLabel>Service Type Version Correspondences</relationshipLabel>
        <relationshipName>Service_Type_Version_Correspondents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Incap311__Distribution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribution</label>
        <referenceTo>Incap311__Distributions__c</referenceTo>
        <relationshipLabel>Service Type Version Correspondences</relationshipLabel>
        <relationshipName>Service_Type_Version_Correspondences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type_Version__c</fullName>
        <label>Service Type Version</label>
        <referenceTo>Incap311__Service_Type_Version__c</referenceTo>
        <relationshipLabel>Service Type Version Correspondents</relationshipLabel>
        <relationshipName>Service_Type_Version_Correspondents</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Incap311__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Reallocate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Type Version Correspondence</label>
    <nameField>
        <displayFormat>SRC-{000000000}</displayFormat>
        <label>Service Type Version  Correspondence Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Type Version Correspondences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>